--- a/front/src/MediaApp.css
+++ b/front/src/MediaApp.css
@@ -2,6 +2,13 @@
     .weatherTitle{
         font-size: 3rem;
     }
+    .weatherInput{
+        height: 1.5rem;
+    }
+    .weatherButton{
+        font-size: 1rem;
+    }
+
     .weatherImage {
         width: 21rem;}
     .weatherBody{
@@ -9,28 +16,39 @@
     }
 }
 
-@media screen and (width<= 630px) {
-    .heading{
-        font-size: 1.5rem;
 
-    }
-
-    
-}
-@media screen and (width<= 510px) {
-    .heading{
-        font-size: 1.1rem;
-    }
-}
 @media screen and (width<=442px){
     .weatherTitle{
+        font-size: 2.5rem;
+    }
+   
+    .weatherButton{
         font-size: 2.5rem;
     }
     .weatherImage {
         width: 17rem;
     }
-    .heading{
-        font-size: 0.9rem;
+    
+}
+
+@media screen and (width<= 470px) {
+    .weatherImage {
+        width: 16rem;
     }
+    .weatherInput{
+        height: 1.5rem;
+        width: 10rem;
+    }
+    .weatherButton{
+        font-size: 1rem;
+        width: fit-content;
+    }
+    
+}
+@media screen and (width<= 370px) {
+    .weatherTitle {
+        font-size: 2rem;
+    }
+    
 }
     
