--- a/front/src/MediaApp.css
+++ b/front/src/MediaApp.css
@@ -23,7 +23,7 @@
     }
    
     .weatherButton{
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     .weatherImage {
         width: 17rem;
@@ -40,7 +40,7 @@
         width: 10rem;
     }
     .weatherButton{
-        font-size: 1rem;
+        font-size: .7rem;
         width: fit-content;
     }
     
