--- a/front/src/MediaApp.css
+++ b/front/src/MediaApp.css
@@ -1,99 +1,109 @@
-@media screen and (width<=1440px){
-    .information{
+@media screen and (width <= 1440px) {
+    .information {
         font-size: 7rem;
     }
 }
 
-@media screen and (width<=705px){
-    .information{
-        font-size: 6rem;
-    }
-}
-
-@media screen and (width<=619px){
-    .information{
-        font-size: 5rem;
-    }
-}
-@media screen and (width<=526px){
-    .weatherBody {
-        flex-wrap: wrap;
-    }
-    
-}
-
-@media screen and (width<=1146px){
-    .informationBox{
-        width:9rem
-    }
-}
-
-@media  screen and (width<= 910px) {
-    .informationBox{
-        width: 7rem;
-    }
-    
-}
-@media screen and (width <=1388px){
-    .weatherInput{
+@media screen and (width <= 1388px) {
+    .weatherInput {
         font-size: 1.1rem;
-        height: 5vh; 
+        height: 5vh;
     }
-    .weatherButton{
+    .weatherButton {
         height: 5vh;
         font-size: 1.1rem;
     }
 }
-@media screen and (width <= 745px){
-    .weatherInformation{
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap:1rem;
+
+@media screen and (width <= 1146px) {
+    .informationBox {
+        width: 9rem;
     }
-    .weatherBody{
+    .weatherInput {
+        font-size: .7rem;
+        height: 5vh;
+    }
+    .weatherButton {
+        height: 5vh;
+        font-size: 1rem;
+    }
+}
+
+@media screen and (width <= 910px) {
+    .informationBox {
+        width: 7rem;
+    }
+}
+
+@media screen and (width <= 745px) {
+    .weatherInformation {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 1rem;
+    }
+    .weatherBody {
         flex-direction: column;
     }
     .otherInfomationBox {
         margin: 3rem;
     }
     .weatherHeading {
-        
         margin: 3rem 4vw;
     }
     .information {
         font-size: 9rem;
     }
 }
-@media screen and (width<=608px){
+
+@media screen and (width <= 705px) {
+    .information {
+        font-size: 6rem;
+    }
+}
+
+@media screen and (width <= 619px) {
+    .information {
+        font-size: 5rem;
+        margin: 3rem 0;
+    }
+}
+
+@media screen and (width <= 608px) {
     .weatherHeader {
         flex-direction: column;
         align-items: center;
-
-    
-}
-    .weatherInput{
-       margin: .5rem;
-        right: 30vw;
+    }
+    .weatherInput {
+        margin: 3rem 0;
+        right: 35%;
+       
         width: 11rem;
     }
-    .weatherButton{
-        right: 25vw;
-        margin: .5rem;
+    .weatherButton {
+        right: 24%;
+        
+        margin: 3rem 0;
     }
-    .celcius{
+    .celcius {
         height: fit-content;
         margin-top: 6rem;
     }
 }
 
-@media screen and (width<=487px){
+@media screen and (width <= 526px) {
+    .weatherBody {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (width <= 487px) {
     .information {
         font-size: 5.5rem;
     }
 }
 
-@media screen and (width<=425px){
-    .otherInformation{
+@media screen and (width <= 425px) {
+    .otherInformation {
         font-size: 1.2rem;
     }
 }
