changes in margin

--- a/front/src/MediaApp.css
+++ b/front/src/MediaApp.css
@@ -88,6 +88,8 @@
         height: fit-content;
         margin-top: 6rem;
     }
+    .weatherTitle {
+        margin-top: 0rem;}
 }
 
 @media screen and (width <= 526px) {
