--- a/front/src/App.css
+++ b/front/src/App.css
@@ -42,9 +42,13 @@
     font-size: 1.4rem;
     margin-left: 1vw;
 }
-
+.weatherInput:focus{
+    outline: none;
+}
 .weatherInput{
+    
     height: 7vh;
+    
     width: 23vw;
     font-size: 1.5rem;
     position: absolute;
