--- a/front/src/App.css
+++ b/front/src/App.css
@@ -27,7 +27,7 @@
 
 }
 .weatherTitle{
-    margin-top: 2rem;
+    margin-top: 5rem;
     font-family: "Playwrite ES", cursive;
     font-optical-sizing: auto;
     font-weight:weight;
@@ -47,7 +47,7 @@
 }
 .weatherInput{
     
-    height: 7vh;
+    height: 2rem;
     
     width: 23vw;
     font-size: 1.5rem;
@@ -72,7 +72,7 @@ font-size: 2rem;
     margin-top: -4vh;
     right: 16vw;
     padding: 0.5rem 1rem;
-    height: 7vh;
+    height: 2rem;
     width: fit-content;
    
    display: flex;
@@ -291,13 +291,7 @@ transition: opacity 1000ms, transform 1000ms;
     opacity: 0;
     transition: opacity 1000ms, transform 1000ms;
 } 
-.search{
-    width: 100vw;
-    height: fit-content;
-    padding: 3vh;
-    display: flex;
-    justify-content: center;
-}
+
 .loader1{
     height: fit-content;
     width: fit-content;
