--- a/front/src/MediaApp.css
+++ b/front/src/MediaApp.css
@@ -7,11 +7,11 @@
 @media screen and (width <= 1388px) {
     .weatherInput {
         font-size: 1.1rem;
-        height: 9vh;
+        
         margin-top: .4rem;
     }
     .weatherButton {
-        height: 9vh;
+        
         font-size: 1.1rem;
         margin-top: .4rem;
     }
@@ -22,12 +22,12 @@
         width: 9rem;
     }
     .weatherInput {
-        height: 7vh;
+        
         margin-top: .6rem;
         font-size: .5rem;
     }
     .weatherButton {
-        height: 7vh;
+        
         font-size: 1rem;
         margin-top: .6rem;
     }
@@ -107,13 +107,11 @@
     
         margin: 3rem 0;
         right: 37vw;
-       height: 10vh;
         width: 11rem;
     }
     .weatherButton {
     
         right: 29vw;
-      height: 10vh ;
         margin: 3rem 0;
     }
     .celcius {
@@ -150,7 +148,10 @@
         font-size: 1.4rem;
     }
     .weatherInput {
-        right: 32vw;
+        right: 29vw;
+    }
+    .weatherButton {
+        right: 23vw;
     }
     
 }
