--- a/front/src/App.css
+++ b/front/src/App.css
@@ -22,7 +22,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 10vh;
+    height: 6rem;
     font-size: 1.2rem;
 
 }
